# SPDX-FileCopyrightText: 2024 Luflosi <dyndnsd@luflosi.de>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "dyndnsd"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
error-chain = "0.12"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
warp = "0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
