# SPDX-FileCopyrightText: 2024 Luflosi <dyndnsd@luflosi.de>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "dyndnsd"
version = "0.5.0"
edition = "2024"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
env_logger = "0.11"
listenfd = "1.0"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
toml = "0.9"
warp = { version = "0.4", features = ["server"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "warn"
nursery = "warn"
pedantic = "warn"
print_stdout = "warn"
unwrap_used = "warn"
use_debug = "warn"
